--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -7,8 +7,8 @@
 % Local commands go here.
 
 %If you want glossaries
-%\input{aglossary.tex}
-%\makeglossaries
+\input{aglossary.tex}
+\makeglossaries
 
 \title{Management principles and use of Jira for Rubin Operations}
 
@@ -16,7 +16,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-William O'Mullane
+William O'Mullane and  Amanda Bauer
 }
 
 \setDocRef{RTN-005}
@@ -47,8 +47,7 @@ We would like to give some guidelines for management of effort in Rubin ops and 
 % Frequently for a technote we do not want a title page  uncomment this to remove the title page and changelog.
 % use \mkshorttitle to remove the extra pages
 
-% ADD CONTENT HERE
-% You can also use the \input command to include several content files.
+\input{body}
 
 \appendix
 % Include all the relevant bib files.
@@ -59,9 +58,8 @@ We would like to give some guidelines for management of effort in Rubin ops and 
 
 % Make sure lsst-texmf/bin/generateAcronyms.py is in your path
 \section{Acronyms} \label{sec:acronyms}
-\input{acronyms.tex}
-% If you want glossary uncomment below -- comment out the two lines above
-%\printglossaries
+%\input{acronyms.tex}
+\printglossaries
 
 
 
