--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -1,4 +1,4 @@
-\documentclass[DM,authoryear,toc]{lsstdoc}
+\documentclass[DM,lsstdraft,authoryear,toc]{lsstdoc}
 % lsstdoc documentation: https://lsst-texmf.lsst.io/lsstdoc.html
 \input{meta}
 
@@ -57,7 +57,7 @@ We would like to give some guidelines for management of effort in Rubin ops and 
 \bibliography{local,lsst,lsst-dm,refs_ads,refs,books}
 
 % Make sure lsst-texmf/bin/generateAcronyms.py is in your path
-\section{Acronyms} \label{sec:acronyms}
+%\section{Acronyms} \label{sec:acronyms}
 %\input{acronyms.tex}
 \printglossaries
 
