--- a/body.tex
+++ b/body.tex
@@ -535,4 +535,5 @@ When members of staff team leave the project, the \gls{T/CAM} should fill in an 
 
 \begin{itemize}
 \item Kanban for \gls{LOE} operations work
+\item Need section on more procedural driven work on mountain and DF.
 \end{itemize}
