--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -1,6 +1,17 @@
-\documentclass[DM,lsstdraft,authoryear,toc]{lsstdoc}
+%\documentclass[DM,authoryear,toc]{lsstdoc}
+\documentclass[DM,authoryear,toc]{lsst-texmf/texmf/tex/latex/lsst/lsstdoc}
 % lsstdoc documentation: https://lsst-texmf.lsst.io/lsstdoc.html
-\input{meta}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% WHEN MERGING WITH OFFICIAL
+% VERSION UN-COMMENT THIS
+% INPUT LINE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\input{meta}
 
 % Package imports go here.
 
@@ -28,7 +39,7 @@ William O'Mullane and  Amanda Bauer
 % \setDocCurator{The Curator of this Document}
 
 \setDocAbstract{%
-We would like to give some guidelines for management of effort in Rubin ops and possibly more so in pre ops while we have more build up.
+This document describes guidelines for the management of effort in Vera C Rubin Operations. It describes the process for agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and Level of Effort work as well.
 }
 
 % Change history defined here.
