fixed strange changes

--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -1,17 +1,7 @@
-%\documentclass[DM,authoryear,toc]{lsstdoc}
-\documentclass[DM,authoryear,toc]{lsst-texmf/texmf/tex/latex/lsst/lsstdoc}
+\documentclass[DM,authoryear,toc]{lsstdoc}
 % lsstdoc documentation: https://lsst-texmf.lsst.io/lsstdoc.html
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% WHEN MERGING WITH OFFICIAL
-% VERSION UN-COMMENT THIS
-% INPUT LINE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\input{meta}
+\input{meta}
 
 % Package imports go here.
 
