minimal change to start branch

--- a/body.tex
+++ b/body.tex
@@ -18,7 +18,7 @@ In this document, we lay out the procedural details for how we define and carry 
 \section{Useful Contacts}
 \label{sec:contacts}
 
-The \RO Acting \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director}  is Amanda Bauer.
+The \RO Acting \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO.
 
 
