Edits to Org Framework (section 4)

--- a/body.tex
+++ b/body.tex
@@ -15,17 +15,17 @@ Examples of scrum-like work include improving algorithms in response to user com
 In this document, we lay out the procedural details for how we define and carry out plans, following the framework described above, to deliver on our milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate. 
 
 
-\section{Useful Contacts}
+\section{Rubin Program Management}
 \label{sec:contacts}
 
-The \RO Acting \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
+The \RO Acting \ \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO.
 
 
-The  Project Controls Specialist is Cathy Petry.
-She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. She assists in tracking milestones and reporting.
+The  Program Coordinator is Cathy Petry.
+She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. She assists in developing the Program Operating Plan (POP), tracking milestones and reporting. On the SLAC side, Christine Soldhal, Business Manager, handles similar tasks.
 
-\section{Associate Directors}
+\section{Rubin Operations Depeartments and Associate Directors}
 \label{sec:tcam}
 
 Rubin Operations has four operational Departments and the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RSP (Rubin System Performance), and REO (Rubin Education and Public Outreach). Each operational Department is lead by an Associate Director.
@@ -37,35 +37,44 @@ Rubin Operations has four operational Departments and the Director’s Office: R
 \label{sec:wbs}
 
 
-The \gls{WBS} provides a hierarchical index of all hardware, software, services, and other deliverables which are required to operate \RO
+The \gls{WBS} provides a hierarchical description of the activiry based organization of Rubin. In operations, the WBD is not as formal as in a construction project, but it provides a useful structure to prgram annual work around. Rubin if the level one of the WBS, the departments are level 2, and teams within the departments are level 3. Individual roles on operations are level 4.  
+
 Thus:
 
 \begin{longtable}[]{@{}lll@{}}
 \hline
-\gls{WBS} & Description & Lead\tabularnewline
+\gls{WBS} & Description \tabularnewline
 \hline
 \endhead
-NUM & \gls{DESC}  & Lead\tabularnewline
+1 & Rubin Director's Office  \tabularnewline
+2 & Rubin Observatory Operations  \tabularnewline
+3 & Rubin Data Production \tabularnewline
+4 & Rubin System Performance  \tabularnewline
+5 & Rubin Education and Public Outreach \tabularnewline
 \hline
 \end{longtable}
 
-These subdivisions are referred to as the \emph{third level \gls{WBS}}.
-Often, they are quoted without the leading ``1'' (e.g. ``02C.01''), but, even in this form, they are referred to as ``third level''.
+%These subdivisions are referred to as the \emph{third level \gls{WBS}}.
+%Often, they are quoted without the leading ``1'' (e.g. ``02C.01''), but, even in this form, they are referred to as ``third level''.
 
-All of these third level \gls{WBS} \glspl{element} are subdivided, forming a fourth level.
-The fourth level always contains a ``00'' \gls{element}, which is used to capture management and \gls{LOE} work, and may contain other fourth level, or even deeper, structure.
-Nodes in the \gls{WBS} tree are referred to as \glspl{element}.
+%All of these third level \gls{WBS} \glspl{element} are subdivided, forming a fourth level.
+%The fourth level always contains a ``00'' \gls{element}, which is used to capture management and \gls{LOE} work, and may contain other fourth level, or even deeper, structure.
+%Nodes in the \gls{WBS} tree are referred to as \glspl{element}.
 
-\subsection{Organization Breakdown
-Structure}\label{organization-breakdown-structure}
+%\subsection{Organization Breakdown
+%Structure}\label{organization-breakdown-structure}
 
-\subsection{The Control Account Manager}
-\label{sec:cam}
+%\subsection{The Control Account Manager}
+%\label{sec:cam}
 
-A \gls{CA} is the intersection between the \gls{WBS} and the \gls{OBS}.
-Each \gls{CA} falls under the purview of a \gls{CAM}.
-Typically within Data Production, a single \gls{CAM} is responsible for the whole of a third level \gls{WBS}.
-That is, the manager at the lead institution for a particular component is responsible for all work performed on that \gls{WBS} \gls{element}, even if some of that work is performed at another institution.
+%A \gls{CA} is the intersection between the \gls{WBS} and the \gls{OBS}.
+%Each \gls{CA} falls under the purview of a \gls{CAM}.
+%Typically within Data Production, a single \gls{CAM} is responsible for the whole of a third level \gls{WBS}.
+%That is, the manager at the lead institution for a particular component is responsible for all work performed on that \gls{WBS} \gls{element}, even if some of that work is performed at another institution.
+
+Work is planned in advance of each financial year at the team level. Team leads will work with department heads to develop plans for activities that address specific milestones, projects, and level of effort activity. 
+
+High level plans are presented to DOE in the first quarter of the calendar year and to NOIRLab somewhat later as part of the POP process. Rubin needs to be ready then early in the calendr year with plans for the comming year. Detailed work plans are developed through the northern summer.
 
 \subsection{Level of Effort Work}
 \label{sec:loe}
