--- a/body.tex
+++ b/body.tex
@@ -186,21 +186,16 @@ The authoritative summary of the long-term planning system may be found in ...
 Here we expand upon the details of that system.
 The plan for pre-operations and Survey Operations is embodied in:
 
+% PJM: milestones come first, logically:
 \begin{enumerate}
-\item
-  A series of \emph{epics}, which describe major pieces of
-  technical work. Epics are associated with concrete, albeit
-  high-level, deliverables (in the \gls{shape} of milestones, below), and have
-  specific resource loads (staff assignments), start dates, and
-  durations.
-\item
-  \emph{Milestones} represent the delivery or availability of specific
-  functionality. Each planning package culminates in a milestone, and
-  may contain other milestones describing intermediate results.
+    \item
+        A set of \emph{Milestones}, each of which represents the delivery or availability of specific functionality. Each planning package culminates in a milestone, and may contain other milestones describing intermediate results.
+    \item
+        A series of \emph{epics}, which describe major pieces of technical work. Epics are associated with concrete, albeit high-level, deliverables in the \gls{shape} of the above milestones, and have specific resource loads (staff assignments), start dates, and durations.
 \end{enumerate}
 
-
-Milestones are allocated to one of four levels, defined as follows:
+Milestones are allocated to one of four levels, defined as follows:% PJM: Can we not design a scheme where we use the term "level" to label both the WBS activities AND the milestones? We seem so close! As it is, though, I think we have to write the following text:
+\footnote{Note that the level of the milestone is logically distinct from the level of the WBS and OBS, even though the same term (``level'') is used to label both. In the OBS, level 0 is the Observatory, level 1 is the departments, level 2 is the teams, and level 3 is the groups within the teams. We take care to always disambiguate ``WBS level'' from ``milestone level'' and never use the term ``level'' without these qualifiers preceding it.}
 
 \begin{description}
 \item[Level 1]
@@ -212,17 +207,14 @@ in consultation with the Director's Office
 These are internal to a particular Department and assigned to a team  and can therefore be specified by a single team lead.
 \end{description}
 
-Some of these are exposed to external reviewers: it is vital that these
-be delivered on time and to specification. Low-level milestones are
-defined for use within Departments, but even here properly adhering to the plan
-is vital: your colleagues in other teams will use these milestones to
-align their schedules with yours, so they rely on you to be accurate.
+Some of these milestones are exposed to external reviewers: it is vital that these be delivered on time and to specification.
+Low-level (3 and beyond) milestones are defined for use within Departments, but even here properly adhering to the plan is vital: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
 Epics should help achieve milestones i.e. they may be blocking issues on the milestones.
 A detailed description of work for a given \gls{epic} is known, it can and should be described in \gls{JIRA}.
 This should be assigned to the appropriate \glspl{cycle}.
 
-
+% PJM: need text describing clearly how sequeneces of epics build up to a milestone - and how the epics will be tracked such that progress towards the milestones is evident.
 
 \subsection{Planning Research Work}
 \label{sec:long-term-research}
