--- a/body.tex
+++ b/body.tex
@@ -96,7 +96,7 @@ In general, we strive to minimize the fraction of our effort which is devoted to
 However, in certain cases such as operations of pipelines or other systems, \gls{LOE} is perfectly acceptable.
 
 As an example, our first-order estimate is that developers in Data Production will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables.
-However, as above, we generally aspire to minimize the fraction of \gls{LOE}: Team Leaders (CAMs) are therefore encouraged to explicitly schedule as much developer time as is possible.
+However, as above, we generally aspire to minimize the fraction of \gls{LOE}: Team Leaders are therefore encouraged to explicitly schedule as much developer time as is possible.
 
 Note that all \gls{LOE} work should be invoiced to the ``00'' fourth-level \gls{WBS} \gls{element} (1.02C.03.00, 1.02C.04.00, etc)
 
