--- a/body.tex
+++ b/body.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-This document provides a guide to the \VRO  approach to project management.
+This document provides a guide to the \gls{VRO}  approach to project management.
 See also the the operations proposal \citeds{LDO-31}
 In operations, there is no \gls{Primavera} or \gls{EVMS} as there are for the Rubin Construction Project.
 
@@ -18,7 +18,7 @@ In this document, we lay out the procedural details for how we define and carry 
 \section{Rubin Program Management}
 \label{sec:contacts}
 
-The \RO Acting \ \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
+The Rubin Observatory Acting \ \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO.
 
 
