significant changes to reflect operations planning vs project software development

--- a/aglossary.tex
+++ b/aglossary.tex
@@ -37,11 +37,14 @@
 \newglossaryentry{Earned Value Management System} {name={Earned Value Management System}, description={A set of tools, techniques and procedures which are used to implement a \gls{EVM} approach to project management}}
 \newglossaryentry{Education and Public Outreach} {name={Education and Public Outreach}, description={The LSST subsystem responsible for the cyberinfrastructure, user interfaces, and outreach programs necessary to connect educators, planetaria, citizen scientists, amateur astronomers, and the general public to the transformative LSST dataset}}
 \newacronym{FITS} {FITS} {\gls{Flexible Image Transport System}}
+\newacronym{FWP} {FWP} {Field Work Proposals}
 \newglossaryentry{Flexible Image Transport System} {name={Flexible Image Transport System}, description={an international standard in astronomy for storing images, tables, and metadata in disk files. See the IAU FITS Standard for details}}
 \newglossaryentry{Handle} {name={Handle}, description={The unique identifier assigned to a document uploaded to DocuShare}}
 \newacronym{IAU} {IAU} {International Astronomical Union}
 \newacronym{IT} {IT} {Information Technology}
 \newglossaryentry{JIRA} {name={JIRA}, description={issue tracking product (not an acronym but a truncation of Gojira the Japanese name for Godzilla)}}
+\newacronym{L1} {L1} {Lens 1}
+\newacronym{L2} {L2} {Lens 2}
 \newacronym{LDM} {LDM} {LSST Data Management (Document Handle)}
 \newacronym{LDO} {LDO} {LSST Document Operations (Document Handle)}
 \newacronym{LOE} {LOE} {Level of Effort}
