--- a/body.tex
+++ b/body.tex
@@ -1,12 +1,12 @@
 \section{Introduction}
 
-This document provides a guide to the \gls{VRO}  approach to project management.
+This document provides a guide to the \VRO \   approach to annual planning.
 See also the the operations proposal \citeds{LDO-31}
 In operations, there is no \gls{Primavera} or \gls{EVMS} as there are for the Rubin Construction Project.
 
-There are a few main ways work will be managed, all within an Agile framework. The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.  We focus on the people doing the work and how they work together, instead of organizing the program into functional silos.  
+There are a few main ways work will be managed, some within an Agile framework (particularly for data release planning). The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.  To the extent possible, we focus on the people doing the work and how they work together. 
 
-This framework allows the multidisciplinary Rubin team to operate the facility and generate nightly data products while continuously improving efficiency of workflows ('kanban' style), as well as iteratively responding to user feedback on a longer timescale to maximize the scientific benefit of annual data releases ('scrum' style).  
+This framework allows the multidisciplinary Rubin team to operate the facility and generate nightly data products while continuously improving efficiency of workflows ('kanban' style\footnote{Kanban is a visual system for managing work as it moves through a process. Kanban is a concept related to lean and just-in-time (JIT) production, where it is used as a scheduling system that tells you what to produce, when to produce it, and how much to produce.}), as well as iteratively responding to user feedback on a longer timescale to maximize the scientific benefit of annual data releases ('scrum' style\footnote{https:\/\/en.wikipedia.org\/wiki\/Scrum\_(software\_development)}).  
 
 Some examples that will use the kanban style are the daily functionality checks needed for nightly operations of the telescope or the regular monitoring of progress toward achieving milestones and reporting to governing organizations. For either of these examples, we will maintain a set of tasks that need to be performed in sequence every cycle.  Each task could be described individually inside a JIRA ticket and grouped together in a set, so that any person doing the daily checks, for example, could be assigned the set of tasks, open the tickets, comment on results, pass additional work onto others as needed, and mark the tickets done as the work is completed. In this way, the completion of the checklist of tasks is transparent and traceable and can be monitored, and the efficiency of the steps in the flow of work can be improved upon continuously. 
 
@@ -14,21 +14,19 @@ Examples of scrum-like work include improving algorithms in response to user com
 
 In this document, we lay out the procedural details for how we define and carry out plans, following the framework described above, to deliver on our milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate. 
 
-
 \section{Rubin Program Management}
 \label{sec:contacts}
 
 The Rubin Observatory Acting \ \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO.
 
-
 The  Program Coordinator is Cathy Petry.
-She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. She assists in developing the Program Operating Plan (POP), tracking milestones and reporting. On the SLAC side, Christine Soldhal, Business Manager, handles similar tasks.
+She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. She assists in developing the annual Program Operating Plan (POP), tracking milestones and reporting. On the SLAC side, Christine Soldhal, Business Manager, handles similar tasks. The POP is a defined report and process for NOIRLab. Rubin Operations considers the POP to be a Rubin activity, which is informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget. For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year. For SLAC, the POP informs SLACs annual planning which culminates in a Field Work Proposal (FWP) for all SLAC High Energy Physics activity including Rubin. The FWP is delivered in June of the current fiscal year for the next fiscal year. The FWP is previewed to SLAC management in February in advance of the final delivery in June. Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year. Detailed activity planning including lower level milestones continues though the year in advance of the next year. This detailed planning is the subject of this document.
 
-\section{Rubin Operations Depeartments and Associate Directors}
+\section{Rubin Operations Departments and Associate Directors}
 \label{sec:tcam}
 
-Rubin Operations has four operational Departments and the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RSP (Rubin System Performance), and REO (Rubin Education and Public Outreach). Each operational Department is lead by an Associate Director.
+Rubin Operations has four operational Departments and the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach). Each operational Department is lead by an Associate Director.
 
 \section{Formal Organizational Structure}
 \label{sec:structure}
@@ -37,7 +35,7 @@ Rubin Operations has four operational Departments and the Director’s Office: R
 \label{sec:wbs}
 
 
-The \gls{WBS} provides a hierarchical description of the activiry based organization of Rubin. In operations, the WBD is not as formal as in a construction project, but it provides a useful structure to prgram annual work around. Rubin if the level one of the WBS, the departments are level 2, and teams within the departments are level 3. Individual roles on operations are level 4.  
+The \gls{WBS} provides a hierarchical description of the activity based organization of Rubin. In operations, the WBS is not as formal as in a construction project, but it provides a useful structure to organize Rubin Operations and plan annual work around. Rubin if the level one of the WBS, the departments are level 2, and teams within the departments are level 3. Individual roles on operations are level 4.   
 
 Thus:
 
@@ -72,9 +70,7 @@ Thus:
 %Typically within Data Production, a single \gls{CAM} is responsible for the whole of a third level \gls{WBS}.
 %That is, the manager at the lead institution for a particular component is responsible for all work performed on that \gls{WBS} \gls{element}, even if some of that work is performed at another institution.
 
-Work is planned in advance of each financial year at the team level. Team leads will work with department heads to develop plans for activities that address specific milestones, projects, and level of effort activity. 
-
-High level plans are presented to DOE in the first quarter of the calendar year and to NOIRLab somewhat later as part of the POP process. Rubin needs to be ready then early in the calendr year with plans for the comming year. Detailed work plans are developed through the northern summer.
+Detailed work is planned in advance of each financial year at the team level. Team leads will work with department heads to develop plans for activities that address specific milestones, projects, and level of effort activity. Highest level milestones are reported regularly thought the fiscal year to SLAC, AURA, NSF and DOE. 
 
 \subsection{Level of Effort Work}
 \label{sec:loe}
@@ -84,12 +80,13 @@ This may be particularly the case for technical managers or others in leadership
 With \gls{LOE} work is assumed to earn value simply through the passage of time.
 
 In general, we strive to minimize the fraction of our effort which is devoted to \gls{LOE} activities and favor those which are more directly accountable.
-However, in certain cases such as operations of pipelines or other systems, \gls{LOE} is perfectly acceptable.
+However, in certain cases such as operations and maintenance of telescope and facility systems, pipelines or other systems, \gls{LOE} is perfectly acceptable.
 
-Our first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables.
-However, as above, we generally aspire to minimize the fraction of \gls{LOE}: T/CAMs are therefore encouraged to explicitly schedule as much developer time as is possible.
+Our first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables. Technical staff in Chile at the summit facility may spend a much more significant fraction of time as  \gls{LOE}.
+However, as above, we generally aspire to minimize the fraction of \gls{LOE} for development activity,
+% This is true for development work. We need to prioritize reliable operations. : team leads are therefore encouraged to explicitly schedule as much developer time as is possible.
 
-Note that all \gls{LOE} work should be invoiced to the ``00'' fourth-level \gls{WBS} \gls{element} (1.02C.03.00, 1.02C.04.00, etc)
+%Note that all \gls{LOE} work should be invoiced to the ``00'' fourth-level \gls{WBS} \gls{element} (1.02C.03.00, 1.02C.04.00, etc)
 
 \section{Estimating Effort}
 \label{sec:effort}
@@ -104,33 +101,35 @@ Appointment as a ``scientist'' includes a 20\% personal research time
 allowance. That is, scientists are expected to devote 1,440 hours per
 year to \gls{LSST}, and the remainder of their time to personal research.
 
-Personal research time is \emph{not} chargeable to \gls{LSST} under any \gls{WBS} or
-account, including level of effort. The Project expects to pay the full
+%Personal research time
+%is \emph{not} chargeable to \gls{LSST} under any \gls{WBS} or
+%account, including level of effort. 
+Rubin expects to pay the full
 rate for an individual with research time who contributes 1,440 hours to
-the project, and does not require any accounting of the remaining 360
-hours.
+operations. This is handled through indirect rates at both NOIRLab and direct charges to research accounts at SLAC. Science time is included in the sub contracts of our partners at affiliated institutions through indirect charges similar to the case for NOIRLab.
+%, and does not require any accounting of the remaining 360 hours.
 
-When reporting actual costs (\S\ref{sec:actuals}), it may
-be helpful to consider the following examples:
+%When reporting actual costs (\S\ref{sec:actuals}), it may
+%be helpful to consider the following examples:
 
-A developer or technician for which the total annual cost (salary, overheads, etc) is
-\(A\) charges an hourly rate of \(A / 1800\).
+%A developer or technician for which the total annual cost (salary, overheads, etc) is
+%\(A\) charges an hourly rate of \(A / 1800\).
 
-A scientist with total annual cost \(\gls{B}\) charges an hourly rate of
-\(\gls{B} / 1440\).
+%A scientist with total annual cost \(\gls{B}\) charges an hourly rate of
+%\(\gls{B} / 1440\).
 
-No further corrections are necessary. In particular, there is no
-difference in the way working hours are measured, or the conversion of
-\glspl{SP} to hours.
+%No further corrections are necessary. In particular, there is no
+%difference in the way working hours are measured, or the conversion of
+%glspl{SP} to hours.
 
 Our base assumption is that 30\% of an individual's \gls{LSST} time (i.e. 540 hours/year for a developer, 432 hours/year for a scientist) are devoted to overhead for regular meetings\footnote{``Meetings'' include, for example, scheduled weekly team meetings, stand-ups, etc; major conferences or project meetings involving preparation, travel time, etc should be scheduled in advance and allocated \glspl{SP}.}, ad-hoc discussions and other interruptions.
 This work is counted as \gls{LOE} (and, as such, is charged to the relevant ``00'' fourth level \gls{WBS} \gls{element}, as described in \S\ref{sec:loe}).
 It is actively encouraged to allocate less than 30\% of an individuals time to \gls{LOE} where that is possible.
 
 Assuming no variation throughout the year, we therefore expect 105 hours of productive work from a developer, or 84 hours from a scientist, per month.
-Note that this is averaged across the year: some months, such as those containing major holidays, will naturally involve less working time than others: the remainder will necessarily include more working time to compensate.
+Note that this is averaged across the year: some months, such as those containing major holidays, will naturally involve less working time than others: the remainder will necessarily include more working time to compensate. For other staff, the \gls{LOE} will be higher but include much more day to day activity than for the developer case.
 
-Rather than working in hours, our Jira based system uses Story Points (\gls{SP}), with one \gls{SP} being defined as equivalent to four hours of effort by a competent developer.
+Rather than working in hours, our JIRA based system uses Story Points (\gls{SP}), with one \gls{SP} being defined as equivalent to four hours of effort by a competent developer.
 Thus, we expect developers and scientists to produce 26.25 and 21 \glspl{SP} per \emph{average} month respectively.
 
 \begin{table}
@@ -155,9 +154,9 @@ Scientist & 1440     &  84            & 21.00 \\
 New or inexperienced developers, even when devoting their full attention to \gls{story}-pointed work, will likely be less productive than their more experienced peers.
 In this case, the ratio of hours to \glspl{SP} increases, but the number of hours remains constant.
 
-Note that specific activities related on ``onboarding'' and getting up to speed with the project can be ticketed as regular work.
+Note that specific activities related on ``onboarding'' and getting up to speed with operations can be ticketed as regular work.
 For example, working through tutorials, reading documentation, and so on are all activities which can earn \glspl{SP}.
-Typically, this will assigned to the ``00'' (management) \gls{element} of the \gls{WBS} (\S\ref{sec:wbs}).
+%Typically, this will assigned to the ``00'' (management) \gls{element} of the \gls{WBS} (\S\ref{sec:wbs}).
 
 \subsubsection{Technical Managers and other Leadership Roles}
 
@@ -167,7 +166,7 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
 \section{Long Term Planning}
 \label{sec:long-term-plan}
 
-The authoritative summary of the long-term planning system make be found in ...
+The authoritative summary of the long-term planning system may be found in (find a POP process document).
 Here we expand upon the details of that system.
 The plan for pre-operations and Survey Operations is embodied in:
 
@@ -188,6 +187,7 @@ The plan for pre-operations and Survey Operations is embodied in:
 Milestones are allocated to one of four levels, defined as follows:
 
 \begin{description}
+%this is not consistent with NOIRLab or our current FY21 plan. We need to discuss an decide how to capture these. Could be one or two RDO level MS and several L2 MS for each department both of which show up in the POP. Or we keep the Major MS classification and have several of those in each Dep. Suppose we had one or two L1 milestones like Annual DR. Then all the current Major MS in our sheet could be L2s that point at that.
 \item[Level 1]
 These are at the full observatory level owned by the directors office
 \item[Level 2]
@@ -206,8 +206,6 @@ align their schedules with yours, so they rely on you to be accurate.
 Epics should help achieve milestones i.e. they may be blocking issues on the milestones.
 A detailed description of work for a given \gls{epic} is known, it can and should be described in \gls{JIRA}.
 This should be assigned to the appropriate \glspl{cycle}.
-
-
 
 \subsection{Planning Research Work}
 \label{sec:long-term-research}
@@ -255,7 +253,7 @@ While developing the \gls{cycle}, please:
   Per the \gls{cycle} cadence (\S\ref{sec:cycle-cadence}), ensure that new development will conclude (or, at a minimum, be in a releasable state) in time for the end of \gls{cycle} release.
 \end{itemize}
 
-Obviously, ensure that the programme of work being developed is achievable by your team in the time available: ultimately, you will want to compare the number of \glspl{SP} your team is able to deliver (\S\ref{sec:effort}) with the sum of the \glspl{SP} in the \glspl{epic} you have scheduled (\S\ref{sec:planning-epics}), while also considering the skills and availability of your team.
+Obviously, ensure that the program of work being developed is achievable by your team in the time available: ultimately, you will want to compare the number of \glspl{SP} your team is able to deliver (\S\ref{sec:effort}) with the sum of the \glspl{SP} in the \glspl{epic} you have scheduled (\S\ref{sec:planning-epics}), while also considering the skills and availability of your team.
 It is better to under-commit and over-deliver than vice-versa, but, ideally, aim to estimate accurately.
 
 \subsubsection{Defining Epics}
@@ -305,6 +303,7 @@ In practice, to ensure your team is evenly loaded, it is usually necessary to br
 \subsubsection{Scheduling Research Work}
 \label{sec:research}
 
+%who gets research time of this type? All developers or just scientists. This is confusing since most people will think in terms of scientific research. NOIRLab engineers will get professional development time. 
 As discussed in \S\ref{sec:long-term-research}, research is sometimes required
 to meet our objectives. However, it is not a natural fit to our usual
 planning process, as it is speculative in its nature: it is often
@@ -525,11 +524,11 @@ Where tickets describe bugs or other urgent emergent work which cannot be deferr
 \subsection{Coordination Standup}
 \label{sec:sup}
 
-
-
 \section{Standard Reporting Cycle}
 \label{sec:reporting-cycle}
  Cathy ?
+ 
+ High level milestone progress will be reported to SLAC and NOIRLab regularly. NOIRLab reports will flow quarterly to the NSF as ell showinf progress on all L1 and L2 milestones called out in the POP. 
 
 \section{Personnel}
 
