added Bob and Phil as authors

--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -17,7 +17,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-William O'Mullane and  Amanda Bauer
+William O'Mullane,  Amanda Bauer, Robert Blum, Phil Marshall
 }
 
 \setDocRef{RTN-005}
